# apogee

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
assets/: default_config.toml
src/: apps.rs  cli.rs  cloud.rs  config.rs  context.rs  deps.rs  dev_dump.rs  emit.rs  global.rs  hooks.rs  init.rs  lib.rs  main.rs  play.rs  report.rs  resolve.rs  runtime.rs  templates.rs
src/config/: aliases.rs  env.rs  mod.rs  modules.rs  paths.rs  projects.rs
src/emit/: aliases.rs  builder.rs  mod.rs  prelude.rs
