[package]
name = "apogee"
version = "0.0.5"
edition = "2021"
description = "Cross-shell config emitter for Orbit (aliases, PATH, env) via a single eval."
license = "MIT"
readme = "README.md"
repository = "https://github.com/suhailphotos/apogee"
keywords = ["shell", "zsh", "bash", "powershell", "config"]
categories = ["command-line-utilities"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE*", "CHANGELOG.md"]

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
dirs = "6"

[features]
default = []
