[package]
name = "apogee"
version = "0.0.18"
edition = "2021"
description = "Cross-shell config emitter for Orbit (aliases, PATH, env) via a single eval."
license = "MIT"
readme = "README.md"
repository = "https://github.com/orbyts/apogee"
homepage = "https://github.com/orbyts/apogee"
keywords = ["shell", "zsh", "bash", "powershell", "config"]
categories = ["command-line-utilities"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE*", "CHANGELOG.md"]

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
dirs = "6"
regex = "1.12.2"
minijinja = { version = "2.14.0", features = ["serde"] }
serde_json = "1.0.145"
