[package]
name = "apogee"
version = "0.1.1-alpha.2"
edition = "2021"
description = "Cross-shell config emitter for Orbit (aliases, PATH, env) via a single eval."
license = "MIT"
readme = "README.md"
repository = "https://github.com/orbyts/apogee"
homepage = "https://github.com/orbyts/apogee"
keywords = ["shell", "zsh", "bash", "powershell", "config"]
categories = ["command-line-utilities"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE*", "CHANGELOG.md"]

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
dirs = "6"
regex = "1.12.2"
minijinja = { version = "2.14.0", features = ["serde"] }
serde_json = "1.0.145"
glob = "0.3.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
